<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FreeTrader 1902 - ScoreKeeper</string>
    <string name="action_restart">Restart</string>
    <string name="month">MONTH</string>
    <string name="gold">GOLD</string>
    <string name="cargo">CARGO</string>
    <string name="engine">ENGINE</string>
    <string name="shotguns">SHOTGUNS</string>
    <string name="armor">ARMOR</string>
    <string name="produce">PRODUCE</string>
    <string name="munition">MUNITION</string>
    <string name="textiles">TEXTILES</string>
    <string name="moonshine">MOONSHINE</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="drop">Drop</string>
    <string name="month_row_color">#40CAFF</string>
    <string name="title_activity_event">Free Trader 1902 - Event</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="western_font_name">cowboy_movie.ttf</string>
    <string name="western_font_name_2">smokum_regular.ttf</string>
    <string name="police_outcome_rule">If you haven\'t the gold you may sell parts of your truck for half the price you paid to buy it (rounded down). If you are unable to pay the fine, then you are arrested and the game is over.</string>
    <string name="title_activity_constable">Constable</string>
    <string name="title_activity_highwayman">Highwayman</string>
    <string name="title_activity_bear">Bear</string>
    <string name="title_activity_win">You won!</string>
    <string name="title_activity_loose">You lost!</string>
    <string name="action_quit">Quit</string>

</resources>
