<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="#DDDDDD"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <de.woitek.freetrader1902scorekeeper.views.FlexibleFontTextView
        android:id="@+id/tEquipmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="ENIGNE"
        android:textSize="40sp"/>

    <de.woitek.freetrader1902scorekeeper.views.FlexibleFontTextView
        android:id="@+id/tEquipmentAmount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:gravity="center"
        android:text="AMOUNT"
        android:textSize="24dp"/>

    <NumberPicker
        android:id="@+id/pckAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bnBuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="90dp"
            android:text="@string/buy"/>

        <Button
            android:id="@+id/bnSell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="90dp"
            android:text="@string/sell"/>

        <Button
            android:id="@+id/bnDrop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="90dp"
            android:text="@string/drop"/>
    </LinearLayout>

</LinearLayout>