<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:cust="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFA400"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <TableRow
            android:id="@+id/rowMonth"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:background="@color/month_row_color"
            android:paddingBottom="@dimen/row_padding"
            android:paddingLeft="@dimen/row_padding_side"
            android:paddingRight="@dimen/row_padding_side"
            android:paddingTop="@dimen/row_padding"
            >

            <de.woitek.freetrader1902scorekeeper.views.FlexibleFontTextView
                android:id="@+id/lblMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/month"
                android:textSize="@dimen/western_font_height"
                cust:fontFaceName="@string/western_font_name"/>

            <view
                android:id="@+id/boxMonth"
                class="de.woitek.freetrader1902scorekeeper.views.BoxUIView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                cust:boxColor="#ffffffff"
                cust:brightBoxes="true"
                cust:numberOfBoxes="4"/>
        </TableRow>

        <TableRow
            android:id="@+id/rowGold"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/row_space"
            android:layout_marginTop="@dimen/row_space"
            android:background="#ffffd700"
            android:paddingBottom="@dimen/row_padding"
            android:paddingLeft="@dimen/row_padding_side"
            android:paddingRight="@dimen/row_padding_side"
            android:paddingTop="@dimen/row_padding"
            android:weightSum="3">

            <de.woitek.freetrader1902scorekeeper.views.FlexibleFontTextView
                android:id="@+id/lblGold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/gold"
                android:textSize="@dimen/western_font_height"
                cust:fontFaceName="@string/western_font_name"/>

            <de.woitek.freetrader1902scorekeeper.views.FlexibleFontTextView
                android:id="@+id/tGold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/western_font_height"
                cust:fontFaceName="@string/western_font_name"/>
        </TableRow>

        <TableRow
            android:id="@+id/rowCargo"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:background="#C0C0C0"
            android:paddingBottom="@dimen/row_padding"
            android:paddingLeft="@dimen/row_padding_side"
            android:paddingRight="@dimen/row_padding_side"
            android:paddingTop="@dimen/row_padding">

            <de.woitek.freetrader1902scorekeeper.views.FlexibleFontTextView
                android:id="@+id/lblCargo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/cargo"
                android:textSize="@dimen/western_font_height"
                cust:fontFaceName="@string/western_font_name"/>

            <view
                android:id="@+id/boxCargo"
                class="de.woitek.freetrader1902scorekeeper.views.BoxUIView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                cust:triStateBoxes="true"
                />

        </TableRow>

        <TableRow
            android:id="@+id/rowEngine"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:background="#E0E0E0"
            android:paddingBottom="@dimen/row_padding"
            android:paddingLeft="@dimen/row_padding_side"
            android:paddingRight="@dimen/row_padding_side"
            android:paddingTop="@dimen/row_padding">

            <de.woitek.freetrader1902scorekeeper.views.FlexibleFontTextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/engine"
                android:textSize="@dimen/western_font_height"
                cust:fontFaceName="@string/western_font_name"/>

            <view
                android:id="@+id/boxEngine"
                class="de.woitek.freetrader1902scorekeeper.views.BoxUIView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"/>
        </TableRow>

        <TableRow
            android:id="@+id/rowShotguns"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:background="#C0C0C0"
            android:paddingBottom="@dimen/row_padding"
            android:paddingLeft="@dimen/row_padding_side"
            android:paddingRight="@dimen/row_padding_side"
            android:paddingTop="@dimen/row_padding">

            <de.woitek.freetrader1902scorekeeper.views.FlexibleFontTextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/shotguns"
                android:textSize="@dimen/western_font_height"
                cust:fontFaceName="@string/western_font_name"/>

            <view
                android:id="@+id/boxShotguns"
                class="de.woitek.freetrader1902scorekeeper.views.BoxUIView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"/>
        </TableRow>

        <TableRow
            android:id="@+id/rowArmor"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:background="#E0E0E0"
            android:paddingBottom="@dimen/row_padding"
            android:paddingLeft="@dimen/row_padding_side"
            android:paddingRight="@dimen/row_padding_side"
            android:paddingTop="@dimen/row_padding">

            <de.woitek.freetrader1902scorekeeper.views.FlexibleFontTextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/armor"
                android:textSize="@dimen/western_font_height"
                cust:fontFaceName="@string/western_font_name"/>

            <view
                android:id="@+id/boxArmor"
                class="de.woitek.freetrader1902scorekeeper.views.BoxUIView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow
            android:id="@+id/rowProduce"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginTop="@dimen/row_space"
            android:background="#C0C0C0"
            android:paddingBottom="@dimen/row_padding"
            android:paddingLeft="@dimen/row_padding_side"
            android:paddingRight="@dimen/row_padding_side"
            android:paddingTop="@dimen/row_padding"
            >

            <de.woitek.freetrader1902scorekeeper.views.FlexibleFontTextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/produce"
                android:textSize="@dimen/western_font_height"
                cust:fontFaceName="@string/western_font_name"/>

            <view
                android:id="@+id/boxProduce"
                class="de.woitek.freetrader1902scorekeeper.views.BoxUIView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                cust:boxColor="#ffa5ffa9"
                cust:brightBoxes="true"
                />
        </TableRow>

        <TableRow
            android:id="@+id/rowMunition"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:background="#E0E0E0"
            android:paddingBottom="@dimen/row_padding"
            android:paddingLeft="@dimen/row_padding_side"
            android:paddingRight="@dimen/row_padding_side"
            android:paddingTop="@dimen/row_padding"
            >

            <de.woitek.freetrader1902scorekeeper.views.FlexibleFontTextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/munition"
                android:textSize="@dimen/western_font_height"
                cust:fontFaceName="@string/western_font_name"/>

            <view
                android:id="@+id/boxMunitions"
                class="de.woitek.freetrader1902scorekeeper.views.BoxUIView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                cust:boxColor="#ffffc194"
                cust:brightBoxes="true"
                />
        </TableRow>

        <TableRow
            android:id="@+id/rowTextiles"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:background="#C0C0C0"
            android:paddingBottom="@dimen/row_padding"
            android:paddingLeft="@dimen/row_padding_side"
            android:paddingRight="@dimen/row_padding_side"
            android:paddingTop="@dimen/row_padding"
            >

            <de.woitek.freetrader1902scorekeeper.views.FlexibleFontTextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/textiles"
                android:textSize="@dimen/western_font_height"
                cust:fontFaceName="@string/western_font_name"/>

            <view
                android:id="@+id/boxTextiles"
                class="de.woitek.freetrader1902scorekeeper.views.BoxUIView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                cust:boxColor="#fface7ff"
                cust:brightBoxes="true"
                />
        </TableRow>

        <TableRow
            android:id="@+id/rowMoonshine"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:background="#E0E0E0"
            android:paddingBottom="@dimen/row_padding"
            android:paddingLeft="@dimen/row_padding_side"
            android:paddingRight="@dimen/row_padding_side"
            android:paddingTop="@dimen/row_padding"
            >

            <de.woitek.freetrader1902scorekeeper.views.FlexibleFontTextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/moonshine"
                android:textSize="@dimen/western_font_height"
                cust:fontFaceName="@string/western_font_name"/>

            <view
                android:id="@+id/boxMoonshine"
                class="de.woitek.freetrader1902scorekeeper.views.BoxUIView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                cust:boxColor="#fffff889"
                cust:brightBoxes="true"
                />
        </TableRow>

    </TableLayout>
</ScrollView>
